Mon Sep 10 20:19:00 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* configure.in: check for sizeof(void*) and for the architecture.

2001-09-05  Dick Porter  <dick@ximian.com>

	* autogen.sh: Fixed the section that adds $ACLOCAL_FLAGS to the
	aclocal invocation, so putting aclocal files in /usr/local works

2001-08-30  Dietmar Maurer  <dietmar@ximian.com>

	* *: removed the libffi dependency, mono now compiles on cygwin 

	* mono/wrapper/build-dll: new file.

2001-08-28  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/console.cs: impl.

	* mono/tests/box.cs: impl.

	* mono/tests/stream-writer.cs: impl.

Mon Aug 27 20:24:26 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* mono/tests/*: New test cases, mostly for virtual method dispatch.
	Use make testb for the slow benchmarking programs,
	make test for the usual regression test checks.

2001-08-22  Rodrigo Moya <rodrigo@ximian.com>

	* mono/cil/Makefile.am:
	* mono/wrapper/Makefile.am: use correct variables for installation
	directories

Tue Aug 21 18:54:06 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* mono/tests/exceptions*: enhanced and added more tests for
	exceptions.

2001-08-20  Miguel de Icaza  <miguel@ximian.com>

	* mono/Makefile.am (SUBDIRS): Remove `test' from here to allow us
	to pass make distcheck

	* mono/wrapper/Makefile.am (EXTRA_DIST): Include genwrapper.pl

	* configure.in, Makefile.am, runtime/Makefile.am (dist-hook,
	install-data-hook): Added mechanism to distribute and install the
	dll files.

2001-08-20  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/stream.cs: new tests for the Stream class

	* configure.in: I really need LIBTOOL for libmonowrapper.so, so I
	added it again.

2001-08-16  Alex Graveley  <alex@ximian.com>

	* configure.in: Replace AM_PROG_LIBTOOL with AC_PROG_RANLIB. This
	removes libtool dependency on all of Mono.

2001-08-10  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/array.cs: more array tests

2001-08-09  Dietmar Maurer  <dietmar@ximian.com>
