@@ -56,7 +56,7 @@ gboolean same_tree (MBTree *t1, MBTree *t2);
 #
 
 locaddr: LDLOC {
-	tree->data.i = - tree->data.i - 4;
+	/* nothing do do */;
 }
 
 locaddr: LDARG {
@@ -78,25 +78,25 @@ reg: CONV_I2 (reg) {
 	x86_alu_reg_imm (*code, X86_AND, tree->reg, 0xffff);
 }
 
-reg: LDLOC 1 {
+reg: LDLOC {
 	switch (tree->type) {
 	case MONO_TYPE_I1:
 		x86_widen_membase (*code, tree->reg, X86_EBP,
-				   - tree->data.i - 4, TRUE, FALSE);
+				   tree->data.i, TRUE, FALSE);
 		break;
 	case MONO_TYPE_U1:
 	case MONO_TYPE_BOOLEAN:
 		x86_widen_membase (*code, tree->reg, X86_EBP,
-				   - tree->data.i - 4, FALSE, FALSE);
+				   tree->data.i, FALSE, FALSE);
 		break;
 	case MONO_TYPE_I2:
 		x86_widen_membase (*code, tree->reg, X86_EBP,
-				   - tree->data.i - 4, TRUE, TRUE);
+				   tree->data.i, TRUE, TRUE);
 		break;
 	case MONO_TYPE_U2:
 	case MONO_TYPE_CHAR:
 		x86_widen_membase (*code, tree->reg, X86_EBP,
-				   - tree->data.i - 4, FALSE, TRUE);
+				   tree->data.i, FALSE, TRUE);
 		break;
 
 	case MONO_TYPE_I:
@@ -106,15 +106,21 @@ reg: LDLOC 1 {
 	case MONO_TYPE_STRING:
 	case MONO_TYPE_PTR:
 		x86_mov_reg_membase (*code, tree->reg, X86_EBP,
-				     - tree->data.i - 4, 4);
+				     tree->data.i, 4);
 		break;
 	default:
 		g_warning ("unknown type %02x", tree->type);
 		g_assert_not_reached ();
 	}
+} cost {
+	MBCOND (tree->type != MONO_TYPE_R4 &&
+		tree->type != MONO_TYPE_R8 &&
+		tree->type != MONO_TYPE_I8);
+
+	return 1;
 }
 
-reg: LDARG 1 {
+reg: LDARG {
 	switch (tree->type) {
 	case MONO_TYPE_I1:
 	case MONO_TYPE_U1:
@@ -135,7 +141,14 @@ reg: LDARG 1 {
 		g_warning ("unknown type %02x", tree->type);
 		g_assert_not_reached ();
 	}
+} cost {
+	MBCOND (tree->type != MONO_TYPE_R4 &&
+		tree->type != MONO_TYPE_R8 &&
+		tree->type != MONO_TYPE_I8);
+
+	return 1;
 }
+
 
 reg: MUL (reg, reg) {
 	if (tree->reg != tree->left->reg)
@@ -168,7 +181,7 @@ reg: SUB (reg, reg) {
 }
 
 stmt: STLOC (CONST_I4) {
-	x86_mov_membase_imm (*code, X86_EBP, - tree->data.i - 4,
+	x86_mov_membase_imm (*code, X86_EBP, tree->data.i,
 			     tree->left->data.i, 4);
 }
 
@@ -177,13 +190,13 @@ stmt: STLOC (reg) {
 	case MONO_TYPE_I1:
 	case MONO_TYPE_U1:
 	case MONO_TYPE_BOOLEAN:
-		x86_mov_membase_reg (*code, X86_EBP, - tree->data.i - 4,
+		x86_mov_membase_reg (*code, X86_EBP, tree->data.i,
 				     tree->left->reg, 1);
 		break;
 	case MONO_TYPE_I2:
 	case MONO_TYPE_U2:
 	case MONO_TYPE_CHAR:
-		x86_mov_membase_reg (*code, X86_EBP, - tree->data.i - 4,
+		x86_mov_membase_reg (*code, X86_EBP, tree->data.i,
 				     tree->left->reg, 2);
 		break;
 	case MONO_TYPE_I:
@@ -192,7 +205,7 @@ stmt: STLOC (reg) {
 	case MONO_TYPE_CLASS:
 	case MONO_TYPE_STRING:
 	case MONO_TYPE_PTR:
-		x86_mov_membase_reg (*code, X86_EBP, - tree->data.i - 4,
+		x86_mov_membase_reg (*code, X86_EBP, tree->data.i,
 				     tree->left->reg, 4);
 		break;
 	default:
@@ -294,7 +307,14 @@ reg: CALL {
 		g_warning ("unknown type %02x", tree->type);
 		g_assert_not_reached ();
 	}
+} cost {
+	MBCOND (tree->type != MONO_TYPE_R4 &&
+		tree->type != MONO_TYPE_R8 &&
+		tree->type != MONO_TYPE_I8);
+
+	return 1;
 }
+
 
 stmt: CALL {
 	x86_mov_reg_imm (*code, X86_EAX, tree->data.p);
@@ -303,25 +323,79 @@ stmt: CALL {
 
 #
 # floating point 
-#
+# fixme: dont know how to assign registers?
 
 freg: CONST_R8 {
-	g_assert_not_reached ();
+	x86_fld (*code, tree->data.p, TRUE);
+}
+
+freg: LDLOC {
+	x86_fld_membase (*code, X86_EBP, tree->data.i, 
+			 tree->type == MONO_TYPE_R8);
+} cost {
+	MBCOND (tree->type == MONO_TYPE_R4 ||
+		tree->type == MONO_TYPE_R8);
+	return 0;
+}
+
+freg: LDARG {
+	x86_fld_membase (*code, X86_EBP, tree->data.i + 8, 
+			 tree->type == MONO_TYPE_R8);
+} cost {
+	MBCOND (tree->type == MONO_TYPE_R4 ||
+		tree->type == MONO_TYPE_R8);
+	return 0;
 }
 
 freg: ADD (freg, freg) {
-	g_assert_not_reached ();
+	x86_fp_op_reg (*code, X86_FADD, 1, TRUE);
 }
 
 stmt: STLOC (freg) {
-	g_assert_not_reached ();
+	g_assert (tree->type == MONO_TYPE_R4 ||
+		  tree->type == MONO_TYPE_R8);
+
+	x86_fst_membase (*code, X86_EBP, tree->data.i, 
+			 (tree->type == MONO_TYPE_R8), TRUE);	
 }
 
 stmt: ARG (freg) {
-	g_assert_not_reached ();
-	x86_push_reg (*code, tree->left->reg);
+	x86_alu_reg_imm (*code, X86_SUB, X86_ESP, 8);
+	x86_fst_membase (*code, X86_ESP, 0, TRUE, TRUE);
 }
 
+stmt: BEQ (freg, freg) {
+	guint8 *start = *code;
+	gint32 offset;
+
+	tree->is_jump = 1;
+	x86_fcompp (*code);
+	x86_fnstsw (*code);
+	x86_alu_reg_imm (*code, X86_AND, X86_EAX, 0x4500);
+	x86_alu_reg_imm (*code, X86_CMP, X86_EAX, 0x4000);
+	offset = 6 + *code - start;
+	x86_branch32 (*code, X86_CC_EQ, tree->data.i - offset, TRUE);
+}
+
+freg: CALL {
+	x86_mov_reg_imm (*code, X86_EAX, tree->data.p);
+	x86_call_membase (*code, X86_EAX, 
+			  G_STRUCT_OFFSET (MonoMethod, addr));
+} cost {
+	MBCOND (tree->type == MONO_TYPE_R4 ||
+		tree->type == MONO_TYPE_R8);
+	return 0;
+}
+
+stmt: RETV (freg) {
+
+	if (!tree->last_instr) {
+		tree->is_jump = 1;
+		x86_jump32 (*code, tree->data.i - 5);      
+	}
+
+	//g_assert (tree->left->reg == X86_EAX); // return must be in EAX
+}
 
 
 #
@@ -368,7 +442,8 @@ stmt: BGE (locaddr, CONST_I4) {
 	gint32 offset;
 
 	tree->is_jump = 1;
-	x86_alu_membase_imm (*code, X86_CMP, X86_EBP, tree->left->data.i, tree->right->data.i);
+	x86_alu_membase_imm (*code, X86_CMP, X86_EBP, tree->left->data.i, 
+			     tree->right->data.i);
 	offset = 6 + *code - start;
 	x86_branch32 (*code, X86_CC_GE, tree->data.i - offset, TRUE);
 } cost {
@@ -378,7 +453,8 @@ stmt: BGE (locaddr, CONST_I4) {
 }
 
 stmt: STLOC (ADD (LDLOC, CONST_I4)) {
-	x86_alu_membase_imm (*code, X86_ADD, X86_EBP, - tree->data.i - 4, tree->left->right->data.i);
+	x86_alu_membase_imm (*code, X86_ADD, X86_EBP, tree->data.i, 
+			     tree->left->right->data.i);
 } cost {
 	MBCOND (tree->type == MONO_TYPE_I4 &&
 		tree->left->left->type == MONO_TYPE_I4 &&
