@@ -1,3 +1,7 @@
+2001-09-19  Dietmar Maurer  <dietmar@ximian.com>
+
+	* mono/tests/test-ops.cs: added more tests
+
 Mon Sep 10 20:19:00 CEST 2001 Paolo Molaro <lupus@ximian.com>
 
 	* configure.in: check for sizeof(void*) and for the architecture.
